# IPASS-MFRC522

./: .gitignore
Arduino_examples/: CMakeLists.txt
Arduino_examples/src/: ArduinoConsole.cpp  ArduinoConsole.hpp  main.cpp
MFRC522/: Arduino.md  Doxyfile  Hwlib.md  MFRC522.hpp  NFCClass.hpp  SPIsetup.hpp  mainpage.md  nfcController.hpp
doc/html/: Arduino.html  Hwlib.html  _m_f_r_c522_8hpp_source.html  _n_f_c_class_8hpp_source.html  _s_p_isetup_8hpp_source.html  annotated.html  class_m_f_r_c522-members.html  class_m_f_r_c522.html  class_n_f_c_class-members.html  class_n_f_c_class.html  classes.html  classlol-members.html  classlol.html  classnfc_controller-members.html  classnfc_controller.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  mainpage_8hpp_source.html  md_Arduino.html  md_mainpage.html  nfc_controller_8hpp_source.html  pages.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_8.js  pages_0.js  searchdata.js
hwlib_examples/: CMakeLists.txt  Makefile  __codelite.workspace
hwlib_examples/bmptk/targets/cortex/atmel-new/sam3xa/source/: system_sam3xa.c
hwlib_examples/bmptk/targets/cortex/atmel/sam3xa/source/: system_sam3xa.c
hwlib_examples/exampleWhitConsole/: ArduinoConsole.cpp  ArduinoConsole.hpp  Makefile  _codelite.project  main.cpp  main.elf  main.map
